Details
-
Bug
-
Status: Resolved
-
Critical
-
Resolution: Fixed
-
Impala 4.0.0
-
ghx-label-12
Description
The intent of the aforementioned line in the code was to check and remove the queue_node if the query was not queued. Instead it end up checking whether that flag is a null pointer or not. Since a valid pointer is always sent, this would result in the queue node never being removed resulting in a memory leak