IMPALA-10942: Fix memory leak in admission controller

This patch fixes a memory leak in the admission controller where
objects tracking state required for queuing were being retained
despite the query being admitted or rejected immediately.

Change-Id: I1df0de0e658f6dcb5a044d108d0943aaa3dea0a1
Reviewed-on: http://gerrit.cloudera.org:8080/17893
Reviewed-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>